# Projet_Info_2A

./: .gitignore  Architecture.md  CLI_Menu_Customer.md  README.md  README_essai.md  State_diagram.md  UML_diagram.md  __main__.py  architecture1.md  class_diagram.md  class_diagramm2.md  gantt_diagram.md  logging_config.yml  main_CLI.py  psql option  pyproject.toml  requirements.txt  state_diagram.md
data/: db.sql  db_test.sql  init_db.sql
doc/diagrams/: Architecture.md  CLI_Menu_Customer.md  CLI_Place_Order.md  CLI_diagram.md  class_diagram.md
doc/suivi/: 2025.09.04-semaine1.md  2025.09.11-semaine2.md  2025.09.18-semaine3.md  2025.09.25-semaine4.md  2025.10.02-semaine5.md  2025.10.09-semaine6.md  2025.10.16-semaine7.md  2025.10.23-semaine8.md  2025.11.06-semaine9.md  2025.11.13-semaine10.md  2025.11.20-semaine11.md
doc/weekly report/: 2025.09.18-semaine3.md  2025.10.02-semaine5.md  2025.10.09-semaine6.md  2025.10.23-semaine8.md  2025.11.06-semaine9.md  2025.11.13-semaine10.md  2025.11.20-semaine11.md
logs/: my_application.log.2025-11-07  my_application.log.2025-11-10  my_application.log.2025-11-12  my_application.log.2025-11-13  my_application.log.2025-11-14  my_application.log.2025-11-15  my_application.log.2025-11-17  my_application.log.2025-11-18  my_application.log.2025-11-19  my_application.log.2025-11-20  my_application.log.2025-11-21
src/: __main__.py  main_CLI.py
src/App/: API.py  AdministratorController.py  DriverController.py  JWTBearer.py  Menue.py  MovieController.py  OrderController.py  (+4 more)
utils/: log_decorator.py  reset_database.py  securite.py
(+104 files in other folders)
